# cpds-agent

./: CMakeLists.txt  Makefile  README.en.md  README.md  build.sh  cpds-agent.service
config/: config.json  cpds-agent.service  cpds_log.conf  log.conf
json/: json.c  json.h
libbpf/: libbpf.cmake
prom/: CMakeLists.txt
prom/include/: prom_collector_registry.h  prom_counter.h  prom_gauge.h
prom/src/: prom_collector_registry.c  prom_counter.c  prom_gauge.c  prom_map.c  prom_metric.c  prom_metric_formatter.c  prom_metric_i.h  prom_metric_sample.c
promhttp/: CMakeLists.txt
promhttp/src/: promhttp.c
src/: collection.c  collection.h  commandline.c  commandline.h  configure.c  configure.h  context.c  context.h  cpdslog.h  database.c  database.h  getsysinfo.c  logger.c  logger.h  main.c  monitor.c  monitor.h  registration.c  registration.h  web_service.c  web_service.h
src/bpf_stat/: bpf_stat.bpf.c  bpf_stat.c  bpf_stat.cmake  bpf_stat.h  bpf_stat_type.h
src/container/: container_collector.c  container_collector.h
src/metrics/: group_agent_alive_metrics.c  group_container_basic_metrics.c  group_container_perf_metrics.c  group_container_process_metrics.c  group_container_resource_metrics.c  group_container_service_metrics.c  group_kernel_fault_metrics.c  group_node_basic_metrics.c  group_node_cpu_metrics.c  group_node_disk_metrics.c  group_node_fs_metrics.c  group_node_memory_metrics.c  group_node_network_metrics.c  group_node_service_metrics.c  group_pod_info_metrics.c  group_test_metrics.c  metric_group_type.h  metric_groups.c  metric_groups.h
src/ping/: ping.c  ping.h
util/: libsqlite.la
zlog/: CMakeLists.txt  zlog.cmake
